# thruster_control

./: CMakeLists.txt  README.md  package.xml
action/: goToPose.action
include/thruster_control/: navigatorPIcontroller.h
src/: navigatorPIcontroller.cpp  thrusterAllocator.cpp
